<resources>
    <string name="app_name">GuiaDelEstudianteOK</string>

    <string name="txt_vacio">Rellenar</string>
    <string name="txt_escudo">Escudo de la especialidad</string>

    <string name="txt_CicloBasico">Ciclo Básico</string>
    <string name="txt_Especialidades">Especialidades</string>
    <string name="txt_Btn_Contacto">Contacto</string>
    <string name="txt_Btn_TextVocacional">Text Vocacional</string>

    <string name="txt_primero">1er año</string>
    <string name="txt_segundo">2do año</string>
    <string name="txt_tercero">3er año</string>
    <string name="txt_cuarto">4to año</string>
    <string name="txt_quinto">5to año</string>
    <string name="txt_sexto">6to año</string>

    <string name="txt_Computacion">Computación</string>
    <string name="txt_Construcciones">Construcciones</string>
    <string name="txt_Electrica">Eléctrica</string>
    <string name="txt_Electronica">Electrónica</string>
    <string name="txt_Mecanica">Mecánica</string>
    <string name="txt_Quimica">Química</string>

</resources>

