<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuCicloBasico">

    <Button
        android:id="@+id/btn_primero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:onClick="IrAPrimerAnio"
        android:text="@string/txt_primero"
        app:layout_constraintEnd_toEndOf="@+id/tv_CicloBasico"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/tv_CicloBasico"
        app:layout_constraintTop_toBottomOf="@+id/tv_CicloBasico" />

    <Button
        android:id="@+id/btn_segundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="IrASegundoAnio"
        android:text="@string/txt_segundo"
        app:layout_constraintEnd_toEndOf="@+id/btn_primero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_primero"
        app:layout_constraintTop_toBottomOf="@+id/btn_primero" />

    <TextView
        android:id="@+id/tv_CicloBasico"
        android:layout_width="109dp"
        android:layout_height="27dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_CicloBasico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>